chore: add code to generate a music DB from another try
add a new controler to generate and get a music DB from Nextcloud
content
